* Fix for adding and editing organisms and genome builds from Add Analysis window.  Dropdowns now refresh properly.
* Changed the validation scheme for the work authorization window.(tcourdy)
* Fixed bug that was causing the organism selected on the Hyb Setup View to change if user went back and changed the organism on the Sample Setup View.(tcourdy)

5.4.1.1 (Apr 15, 2012)
----------------------
* Fix SQL errors in gnomex_db_ddl.sql.  (tdisera)
* Added Lucene indexing to allow lookup on experiment number, datatrack number and analysis number. 
* For Data Tracks ucsc links - Strip any line returns from the name, summary, or description when making UCSC links. (tdisera, dnix)
* Change account screen no longer requests Department (bspiglejr)
* Change account screen now has radio buttons indicating existing or new lab.  If existing lab user chooses from a drop down.  If new user fills in text box. (bspiglejr)
* Change account screen now has radio buttons for University of Utah or not.  If University of Utah then request UNID.  Otherwise request institution, username and password. (bspiglejr)
* Change Account Screen: If existing lab is chosen user is automatically added as a LabUser to that lab. (bspiglejr)
* Change Account Screen: Users are now added as inactive to allow for review before activation. (bspiglejr)
* Change Account Screen now has more email address validation. (bspiglejr)
* Change Account Screen now has text suggesting university ids be a "u" followed by 7 digits. (bspiglejr)
* Change Account Screen now validates that the combination of first name, last name and email address does not already exist in the database. (bspiglejr)
* Fixed ExperimentDetailView so that Files tab works from Analysis Edit (Experiments tab, double-click on experiment in tree).  Also, will address issue found when trying to show Experiment Detail from new Topics view. (tdisera)
* Changed range on avg insert size (HiSeq experiments)  